--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "main": "index.js",
     "scripts": {
         "start": "node dist/app",
-        "dev": "nodemon dist/app",
-        "webpack": "webpack --config webpack.config.ts"
+        "dev": "tsc && concurrently \"npm run webpack\" \"npm run copy-files\" \"nodemon -q dist/app.js\"",
+        "build": "tsc --outDir build && concurrently \"cp -r ./src/views/ ./build/src/views/\" \"cp -r ./package.json ./build/\"",
+        "webpack": "webpack --config webpack.config.ts",
+        "copy-files": "cp -r ./src/views/ ./dist/src/views/",
+        "clear": "rm -rf build dist"
     },
     "keywords": [],
     "author": "CongHuy.dev",
@@ -28,6 +31,7 @@
         "@types/helmet": "^4.0.0",
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.0.0",
+        "concurrently": "^7.2.2",
         "nodemon": "^2.0.18",
         "ts-loader": "^9.3.1",
         "webpack": "^5.73.0",
