--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
         "rotating-file-stream": "^3.0.4"
     },
     "devDependencies": {
+        "@babel/core": "^7.18.6",
         "@babel/register": "^7.17.7",
         "@types/cors": "^2.8.12",
         "@types/dotenv": "^8.2.0",
+        "@types/estree": "^0.0.52",
         "@types/express": "^4.17.13",
         "@types/helmet": "^4.0.0",
         "@types/morgan": "^1.9.3",
@@ -34,6 +36,8 @@
         "concurrently": "^7.2.2",
         "nodemon": "^2.0.18",
         "ts-loader": "^9.3.1",
+        "ts-node": "^10.8.2",
+        "typescript": "^4.7.4",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.10.0",
         "webpack-node-externals": "^3.0.0"
