--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Express API Base Structure For TypeScript",
     "main": "index.js",
     "scripts": {
-        "start": "node dist/app",
+        "start": "node app.js",
         "dev": "tsc && concurrently \"npm run webpack\" \"npm run copy-files\" \"nodemon -q dist/app.js\"",
         "build": "tsc --outDir build && concurrently \"cp -r ./src/views/ ./build/src/views/\" \"cp -r ./package.json ./build/\"",
         "webpack": "webpack --config webpack.config.ts",
